<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_margin="10dp"
            android:text="@string/legend_simple_request"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/blue_main"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/button_success"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:layout_marginRight="10dp"
                android:text="@string/action_success"
                android:textSize="16sp"
                android:textColor="#fff"
                android:background="@color/blue_main"/>

            <TextView
                android:id="@+id/button_error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:layout_marginLeft="10dp"
                android:text="@string/action_error"
                android:textSize="16sp"
                android:textColor="#fff"
                android:background="@color/blue_main"/>
        </LinearLayout>

        <TextView
            android:id="@+id/result_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_margin="20dp"
            android:textSize="14sp"
            android:textColor="#212121"
            android:maxLines="5"
            android:background="#e8e8e8"
            android:scrollbars="vertical"
            android:scrollbarAlwaysDrawVerticalTrack="true"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_margin="10dp"
            android:text="@string/legend_request_queue"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/blue_main"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/button_add_request"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:layout_marginRight="10dp"
                android:text="@string/action_add_to_queue"
                android:textSize="16sp"
                android:textColor="#fff"
                android:background="@color/blue_main"/>

            <TextView
                android:id="@+id/button_launch_queue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:layout_marginLeft="10dp"
                android:text="@string/action_launch_the_queue"
                android:textSize="16sp"
                android:textColor="#fff"
                android:background="@color/blue_main"/>
        </LinearLayout>

        <TextView
            android:id="@+id/info_queue_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_margin="20dp"
            android:textSize="14sp"
            android:textColor="#212121"
            android:maxLines="5"
            android:background="#e8e8e8"
            android:scrollbars="vertical"
            android:scrollbarAlwaysDrawVerticalTrack="true"/>
    </LinearLayout>
</ScrollView>