<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_margin="10dp"
        android:text="@string/legend_request_queue"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@android:color/black"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"
            android:onClick="addRequestToQueue"
            android:text="@string/action_add_to_queue"
            android:textColor="@android:color/white"
            android:background="@color/blue_main"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:onClick="launchRequestQueue"
            android:text="@string/action_launch_the_queue"
            android:textColor="@android:color/white"
            android:background="@color/blue_main"/>
    </LinearLayout>

    <TextView
        android:id="@+id/result_text"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        android:layout_margin="20dp"
        android:textSize="14sp"
        android:textColor="#212121"
        android:background="#e8e8e8"
        android:scrollbars="vertical"
        android:scrollbarAlwaysDrawVerticalTrack="true"/>
</LinearLayout>